# Daily

./: .gitignore  Dockerfile  LICENSE  README.md  WIP.ipynb  api_counter.py  basic_pyspark.ipynb  check_limits.sh  create_data.py  debuter.ipynb  guide.md  guide_spark.ipynb  main.py  mesnotes.md  movies_complete.csv  movies_tagged.parquet  pyproject.toml  spark1.ipynb  spark_vs_polars_comparison.py  test_spark.py
.devcontainer/: Dockerfile  check_container.sh  devcontainer.json  setup.sh
data/: fish_encounters.csv
input/: file.csv  file.json
