[project]
name = "daily"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pylint>=4.0.4",
    "pyspark>=4.1.1",
    "ruff>=0.15.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
]
